@@ -1,5 +1,6 @@
 next
 ----
+-translate_sequence: updated to make use of the Fasta::SimpleIndexer module for sequence lookups.
 -sffinfo: new component
 -p_func/parse_evidence: Database path is now configurable
 -metagene: updated metagene2bsml script to use the Ergatis::IdGenerator module for feature ID's.
